added the ability for a buyer to book a viewing

--- a/OrangeBricks.Web/Views/Property/Index.cshtml
+++ b/OrangeBricks.Web/Views/Property/Index.cshtml
@@ -33,4 +33,11 @@
     <a href="@Url.Action("MakeOffer", "Property", new {id = property.Id})" class="btn btn-primary">
         Make Offer
     </a>
+
+    if (User.IsInRole("Buyer"))
+    {
+        <a href="@Url.Action("BookViewing", "Property", new {id = property.Id})" class="btn btn-primary">
+            Book Viewing
+        </a>
+    }
 }
